--- a/package.json
+++ b/package.json
@@ -18,18 +18,22 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
+    "jquery": "^3.6.0",
     "ngx-loading-x": "^1.0.3",
     "ngx-spinner": "^13.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
+    "yarn": "^1.22.17",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.3",
     "@angular/cli": "~13.1.3",
     "@angular/compiler-cli": "~13.1.0",
+    "@angular/localize": "^13.1.3",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
