--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
+    "firebase-tools": "^10.1.4",
     "jquery": "^3.6.0",
     "ngx-loading-x": "^1.0.3",
     "ngx-spinner": "^13.0.0",
