--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "angular-ellipsis": "^1.0.1",
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.7.2",
+    "bootstrap-icons": "^1.8.0",
     "firebase-tools": "^10.1.4",
     "jquery": "^3.6.0",
     "ngx-loading-x": "^1.0.3",
